Add techwright sso for internal (#71)
* Add action_text setup

* Add Techwright SSO for admin portal and internal urls

--- a/config/credentials.example.yml
+++ b/config/credentials.example.yml
@@ -36,3 +36,13 @@ cloudflare:
   turnstile_site_key: your_turnstile_site_key_here
   turnstile_secret_key: your_turnstile_secret_key_here
 
+# TechWright SSO credentials (for developer portal authentication)
+techwright:
+  client_id: your_techwright_client_id_here
+  client_secret: your_techwright_client_secret_here
+  # Site URL for browser redirects (authorization)
+  site: https://techwright.io
+  # Token site URL for server-side requests (optional, defaults to site)
+  # For devcontainer: use http://host.docker.internal:3003 when site is localhost
+  # token_site: http://host.docker.internal:3003
+
